--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-ST_TRACKING_SERVER='https://event.searchtap.net/v2'
+ST_TRACKING_SERVER='https://personalise.searchtap.net/v2'
 RUN_ENV='production'
