--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ node-build: &node-build
     - save_cache: *save_cache_settings
     - run: mkdir -p shared
     - run: rm -rf ./lib
-    - run: yarn build
+    - run: yarn build-dev
     - run: cp -r lib package.json yarn.lock .circleci webpack.config.js .env.production .env.default shared/
     - store_artifacts:
         path: shared
