--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
           command: |
             cd recommendation-js
             ls
-#            npm publish --access public
+            npm publish --access public
 
 workflows:
   version: 2
