--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "all": true
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "browser-cookies": "^1.2.0",
     "nanoid": "^2.1.7"
   },
