--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,5 +86,5 @@ workflows:
             - build
           filters:
             branches:
-              only: deploy_ci
+              only: release
 
