--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@searchtap/recommendation-client",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/searchtap/recommendation-js"
+  },
   "version": "0.0.5",
   "main": "lib/index.min.js",
   "types": "lib/types/StRecommendationTracker.d.ts",
